# self-supervised-learning

./: .gitignore  README.md  debug_main.py  eval_main.py  main.py  pyproject.toml  setup.cfg  setup.py
awesome_ssl/: debug.py  evaluate.py  train.py
awesome_ssl/augmentations/: crop_and_shift.py  jigsaw.py
awesome_ssl/callbacks/: custom_checkpoint.py  metrics.py  relative_distance.py  save_embeddings.py
awesome_ssl/datasets/: crop_and_shift.py  custom_datasets.py  dataloader_utils.py  ffcv_augmentations.py  ffcv_datasets.py  folder_dataset.py  jigsaw.py  simclr_aug.py
awesome_ssl/models/: byol.py  byol_lucidrains.py  dummies.py  eval_byol.py  model_utils.py  simclr.py
awesome_ssl/optimizers/: lars.py
bash/: debug.sh  evaluate_all_in_folder.sh  evaluate_ckpts.sh  train_a_lot.sh  useful_command.bashrc
configs/: config.yaml  debug_cpu_config.yaml  evaluate_config.yaml
configs/callbacks/: linear_fit_callbacks.yaml  pretrain_callbacks.yaml
configs/dataset/: imagenet_byol.yaml
configs/experiment/: crop_pretrain.yaml  debug.yaml  jigsaw_pretrain.yaml  linear_fit.yaml  pretrain.yaml  pretrain_byol.yaml  pretrain_lucidrains_copy.yaml  pretrain_simclr.yaml
configs/logger/: wandb_linear_fit.yaml  wandb_pretrain.yaml
configs/model/: byol.yaml  byol_eval.yaml  byol_imagenette.yaml  byol_imagenette_eval.yaml  simclr.yaml
configs/trainer/: default.yaml  (+3 more)
models/: byol.py  model_utils.py
notebook/: BYOL_Playground.ipynb  Untitled.ipynb  all_model_equal_label.pkl  all_model_labels.pkl  augmentation_debugger.ipynb  compare_model_outputs.ipynb  confusion_examiner.ipynb  ffcv_debugger.ipynb  yfcc.ipynb
tests/: test_byol.py  test_train_config.py
(+101 files in other folders)
