[metadata]
name = awesome_ssl
version = 0.0.1
author = Yunxing Liao
author_email = yunxingl@mit.edu
description = Ahhhhhh
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lucy7298/self-supervised-learning
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = awesome_ssl
packages = find:
python_requires = >=3.6

[options.packages.find]
where = awesome_ssl