[metadata]
name = awesome_ssl
author = me
author_email = ...
description_file = README.md

[options]
package_dir =
    = awesome_ssl
packages = find:
python_requires = >=3.6
install_requires = 
    torch
    pytorch-lightning
    omegaconf
    kornia
    hydra-core
    lightning-bolts
    torchvision
    pytest
    pytest-mock
    wandb

[options.packages.find]
where = awesome_ssl

[isort]
line_length = 99
profile = black
filter_files = True


[flake8]
max_line_length = 99
show_source = True
format = pylint
ignore =
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
exclude =
    .git
    __pycache__
    data/*
    tests/*
    notebooks/*
    logs/*


[tool:pytest]
python_files = tests/*
log_cli = True
markers =
    slow
addopts =
    --durations=0
    --strict-markers
    --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning